# all-accounts

./: .gitignore  docker-compose.local.yml
backend/: Dockerfile  pyproject.toml
backend/all_accounts/: manage.py
backend/all_accounts/all_accounts/: asgi.py  urls.py  wsgi.py
backend/all_accounts/all_accounts/settings/: base.py  development.py  production.py
backend/all_accounts/shop/: admin.py  models.py  urls.py  views.py
backend/all_accounts/shop/migrations/: 0001_initial.py  0002_initial.py  0003_lager.py
backend/all_accounts/templates/: base.html  messages.html  sidebar.html
backend/all_accounts/templates/emails/: email_verification.html  password_reset_email.html
backend/all_accounts/templates/shop/: brands.html  lager.html  shop.html  shop_detail.html  update_brands.html  update_lager.html  update_shop.html
backend/all_accounts/templates/users/: change_password.html  dashboard.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  profile.html  signup.html  under_construction.html
backend/all_accounts/users/: admin.py  middleware.py  models.py  urls.py  views.py
backend/all_accounts/users/migrations/: 0001_initial.py
backend/all_accounts/utils/: common.py
